
####   Don't forget to change the version number in configure.ac!   ####

24 Oct 2005 LPTEA condition code setting - Roger Bowler
23 Oct 2005 SIGP/IPL enhancements: add support for new Conditional Emergency
            and Sense Running State orders, add support for Set Architecture
            order parm code 2 and other associated fixes to SIGP processing
            (minor fixes to clear reset logic, "operator intervening" status;
            restructure ipl.c & add support for captured z/Arch PSW, add CPU#
            to registers display in hscmisc.c) - Fish
22 Oct 2005 ACCTYPE_LPTEA in translate_addr - Roger Bowler
22 Oct 2005 Fish's (x-n) bit-shifts (ALRF readability enhancement) - Roger Bowler
21 Oct 2005 Move inline functions from esame.c to inline.h - Roger Bowler
20 Oct 2005 Fix extra path separator issue in http_download - Fish
20 Oct 2005 "tasks/xmlrates" == 'cgibin_xml_rates_info()' contributed
            by Tim Pinkawa [timpinkawa@gmail.com] - Fish
20 Oct 2005 cckdutil.c: use LSEEK instead of lseek - Fish
19 Oct 2005 Add OSTAILOR z/OS - Roger Bowler
19 Oct 2005 Don't allow windows paths to confuse shared_ckd_init - Fish
18 Oct 2005 Setting of excarid for ASTE-instance exception (Fish) - Roger Bowler
15 Oct 2005 Fix panel color - Jay & Greg Smith
15 Oct 2005 Fix ASTE instance number handling in PC - Jan Jaeger
12 Oct 2005 cckd: gcol moves l2 tables to the front - Greg Smith
12 Oct 2005 cckd_comp improvements - Greg Smith
11 Oct 2005 Minor change in CU14, thanks Roger - Bernard van der Helm
10 Oct 2005 MIDAW list must not cross a page boundary - Roger Bowler
10 Oct 2005 IDTE instruction is RRF_RM format with unused M4 operand - Roger Bowler
07 Oct 2005 Display SIGP order number in addition to description - Roger Bowler
06 Oct 2005 Store Facility List Extended (STFLE) - Roger Bowler
06 Oct 2005 Implemented ETF2 enhancements, still having the flu - Bernard van der Helm
06 Oct 2005 Implemented ETF3 and crypto while having the flu - Bernard van der Helm