@@ -22,7 +22,7 @@
 #define FEATURE_COMPRESSION
 #define FEATURE_CPU_RECONFIG
 #define FEATURE_DAT_ENHANCEMENT
-//#define FEATURE_DAT_ENHANCEMENT_FACILITY_2                       /*@Z9*/
+#define FEATURE_DAT_ENHANCEMENT_FACILITY_2                       /*@Z9*/
 #define FEATURE_DUAL_ADDRESS_SPACE
 #define FEATURE_EMULATE_VM
 #define FEATURE_ESAME
