@@ -727,6 +727,7 @@
 <li>Modified CCW Indirect Data Addressing (MIDAW) Facility</li>
 <li>Extended-Immediate Facility</li>
 <li>Message-Security-Assist Extension 1</li>
+<li>DAT-Enhancement Facility 2</li>
 <li>Store-Facility-List-Extended Facility</li>
 <li>ETF2-Enhancement Facility</li>
 <li>ETF3-Enhancement Facility</li>
@@ -903,7 +904,7 @@ lists, please let me (Jay Maynard) know.</P>
 </P>
 <P>
 <small>
-Last updated 06 Oct 2005
+Last updated 24 Oct 2005
 </small>
 </P>
 </BODY>
